# Dragon-Runner

./: .gitignore  LICENSE  README.md  config.py  flake.nix  main.py  pyproject.toml  requirements.txt  run.py  runner.py  setup.py  test.py  testerConfig.json  toolchain.py
.github/workflows/: ci.yml
configs/: errorConfig.json  gccConfig.json  jamConfig.json  llcConfig.json  llvmConfig.json  testerConfig.json
dragon_runner/: __init__.py  cli.py  config.py  constants.py  errors.py  grader.py  harness.py  log.py  main.py  runner.py  test.py  testfile.py  toolchain.py  utils.py
dragon_runner/scripts/: add_empty.py  base.py  build.py  checkout.py  clean_build.py  gather.py  gen_config.py  grade.py  grade_perf.py  key.py  loader.py  script_loader.py
dragon_runner/src/: cli.py  config.py  errors.py  harness.py  log.py  main.py  runner.py  server.py  testfile.py  toolchain.py  utils.py
src/: cli.py  config.py  errors.py  main.py  runner.py  test.py  toolchain.py  utils.py
tests/: checkpoint.json.test  conftest.py  fixtures.py  run_tests.py  run_tests.sh  test_command.py  test_config.py  test_grader.py  test_grader_restore.py  test_io.py  test_runner.py  test_runtime.py
tests/CPackage/input/: int_arithmetic_2.in  int_multiplication_1.in  (+1 more)
tests/configs/: ConfigGrade.json  VCalcCompileConfig.json  ValgrindConfig.json  ValgrindGazpreaConfig.json  catConfig.json  catConfigDarwin.json  gazpreaConfig.json  gccConfig.json  gccFailConfig.json  gccMixConfig.json  gccPassConfig.json  invalidDirConfig.json  invalidExeConfig.json  invalidMultiConfig.json  invalidRutnime.json  perfConfig.json  runtimeConfigDarwin.json  runtimeConfigLinux.json  serverConfig.json
tests/scripts/: Grader.py  grader.py
(+17 files in other folders)
